posicionado botao close modal

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="modal flex-row align-center justify-content hidden">
+    <div class="modal flex-row align-center">
       <img src="./assets/close.svg" alt="Close" class="modal__close">
       <h3 class="modal__title"></h3>
       <img class="modal__img">
