olha o bixo vindo

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <title>CubosFlix</title>
   <link href="https://fonts.googleapis.com/css?family=Manrope:200,300,regular,500,600,700,800" rel="stylesheet" />
   <link rel="stylesheet" href="./css/layout.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
   <link rel="stylesheet" href="./css/spacing.css">
   <script src="scripts/carrossel.js" defer></script>
   <script src="scripts/highlights.js" defer></script>
-  <script src="scripts/modal.js" defer></script>
+  <script src="scripts/modal.js" defer></script>  
 </head>
 
 <body class="body">
@@ -57,9 +57,9 @@
       </div>
     </div>
   </div>
-  <div class="modal flex-row align-center hidden">
+  <div class="modal flex-column justify-center align-center hidden">
     <img src="./assets/close.svg" alt="Close" class="modal__close">
-    <h3 class="modal__title"></h3>
+    <h3 class="modal__title mgbt-4"></h3>
     <img class="modal__img">
     <p class="modal__description">
     </p>
